# GreenPath-AIHackaton

./: .env.example  .env.unified  .gitignore  Dockerfile.agent  Dockerfile.agent-railway  Dockerfile.geo-mcp  Dockerfile.geo-mcp-railway  Dockerfile.neo4j-mcp  Dockerfile.neo4j-mcp-railway  README.md  complete_supabase_setup.sql  doc_analysis_strategy.py  docker-compose.yml  env.template  fixed_geo_fetch_result.json  neo4j_with_fixed_tipos.json  nginx.conf  pyproject.toml  requirements.txt  setup_supabase_embeddings.sql  state_flow_verification.md  test_geo_kb_agent_only.py  test_geo_kb_simple.py  test_optimized_geo_kb.py  test_workflow.py
config/: demo_final_state.json  last_step_test_results.json  neo4j_correct_results.json  test_state_data.json
deployment/: deploy-railway.sh  deploy.sh  deploy_enhanced_geo_kb.sh
docs/: AGENT_SETUP_VERIFICATION.md  COMPLETE_SETUP_GUIDE.md  INTEGRATION_GUIDE.md  agents.md  layer_table_map.md  manual_verification_checklist.md  problem_statement.md  sample_data_content.md  sample_data_hydro.md  supabase_schema.md
geo-fetch-mcp/: app.py  embedding_tools.py  enhanced_embedding_tools.py  models.py  pyproject.toml  railway.json  requirements.txt  run_http.py  run_stdio.py  supabase_io.py  test_client.py  test_used_tools.py
mcp-geo2neo/: .env.example  app.py  neo4j_io.py  pyproject.toml  railway.json  requirements.txt  run_http.py  run_stdio.py  test_client.py  test_used_tools.py
scripts/: chunk_and_embed_production.py  chunk_with_embeddings_production.py  comprehensive_document_analyzer.py  embedding_document_analyzer.py  (+10 more)
(+60 files in other folders)
